2011-10-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_form.php
	include/functions_db.php
	operation/projects/task.php
	operation/projects/project.php
	operation/projects/people_manager.php
	operation/projects/task_detail.php
	operation/projects/project_detail.php
	operation/projects/task_move.php
	operation/side_menu.php: Fixed several ACLs issues to manage
	projects and tasks. Clean some code too and fix few little bugs

2011-10-03  Sergio Martin <sergio.martin@artica.es>

	* operation/user_report/report_monthly.php: Fixed users view
	permission to avoid a user view other users if not has User Manage
	ACL for bug 3166679

2011-09-22  Vanessa Gil <vgil@artica.es>

	* godmode/setup/dbmanager.php
	godmode/setup/filemgr.php
	godmode/setup/newsboard.php
	godmode/setup/setup_mailtemplates.php
	godmode/setup/setup_visual.php
	include/languages/*.po
	include/languages/*.mo
	include/languages/index.pot
	include/mailtemplates/incident_close.tpl
	operation/download/browse.php
	operation/projects/project_detail.php
	operation/user_report/report_annual.php: Fixed: some strings don't use
	the translation system.

2011-09-21  Vanessa Gil <vgil@artica.es>

	* operation/projects/people_manager.php: Fixed: the same user and role 
	can be added more than one time to the same project.

2011-09-21  Vanessa Gil <vgil@artica.es>

	* operation/projects/people_manager.php: Fixed: the same user can be added 
	more than one time to the same project.

2011-09-20  Sancho Lerena <slerena@artica.es>

	*  util-all
	util-bzr-update
	util-create-po
	util-README
	util-update-po
	util-generate-tarball
	extract_newlines.sh
	util-create-template
	util-compile-mo: Updated strings and scripts to manipulate
	language data.

2011-09-20  Vanessa Gil <vgil@artica.es>

	* integria_dbdata.sql
	* integria_demo.sql: Added disabled field for tusuario

2011-09-16  Sancho Lerena <slerena@artica.es>

	* integria_db.sql: Added disabled field for tusuario
